# apngopt-quant

./: .gitignore  CMakeLists.txt  README.md  apngopt.cpp
assets/: apngst
libimagequant/: CMakeLists.txt
zlib/: zutil.c
zopfli/: blocksplitter.c  deflate.c  gzip_container.c  squeeze.c  zlib_container.c  zopfli_lib.c
